--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -189,17 +189,17 @@ jobs:
       - name: Update task definition for server
         run: |
           jq '.taskDefinition.containerDefinitions[0].image = "${{ steps.login-ecr.outputs.registry }}/server:${{ env.IMAGE_TAG }}"' current-server-task-def.json > intermediate-server-task-def.json
-          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy)' intermediate-server-task-def.json > final-server-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy, .requiresAttributes, .compatibilities)' intermediate-server-task-def.json > final-server-task-def.json
 
       - name: Update task definition for guest
         run: |
           jq '.taskDefinition.containerDefinitions[0].image = "${{ steps.login-ecr.outputs.registry }}/guest:${{ env.IMAGE_TAG }}"' current-guest-task-def.json > intermediate-guest-task-def.json
-          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy)' intermediate-guest-task-def.json > final-guest-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy, .requiresAttributes, .compatibilities)' intermediate-guest-task-def.json > final-guest-task-def.json
 
-      - name: Update task definition for host
+      - name: Update task definition for hos
         run: |
           jq '.taskDefinition.containerDefinitions[0].image = "${{ steps.login-ecr.outputs.registry }}/host:${{ env.IMAGE_TAG }}"' current-host-task-def.json > intermediate-host-task-def.json
-          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy)' intermediate-host-task-def.json > final-host-task-def.json
+          jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy, .requiresAttributes, .compatibilities)' intermediate-host-task-def.json > final-host-task-def.json
 
       - name: Register task definition for server
         run: |
