--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -215,13 +215,13 @@ jobs:
 
       - name: Update ECS Service for server
         run: |
-          aws ecs update-service --cluster your-cluster-name --service server-service-name --task-definition server
+          aws ecs update-service --cluster prod --service server --task-definition server
 
       - name: Update ECS Service for guest
         run: |
-          aws ecs update-service --cluster your-cluster-name --service guest-service-name --task-definition guest
+          aws ecs update-service --cluster prod --service guest --task-definition guest
 
       - name: Update ECS Service for host
         run: |
-          aws ecs update-service --cluster your-cluster-name --service host-service-name --task-definition host
+          aws ecs update-service --cluster prod --service host --task-definition host
 
