--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -160,6 +160,9 @@ jobs:
         run: |
           echo "IMAGE_TAG=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
+      - name: Print IMAGE_TAG value
+        run: echo "IMAGE_TAG is ${{ env.IMAGE_TAG }}"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
