--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -72,6 +72,10 @@ jobs:
         run: |
           echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
+      - name: xxxxxxx
+        run: |
+          echo $VERSION
+
       - name: Build, tag, and push server image to Amazon ECR
         run: |
           ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
@@ -106,6 +110,10 @@ jobs:
         run: |
           echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
+      - name: xxxxxxx
+        run: |
+          echo $VERSION
+
       - name: Build, tag, and push guest image to Amazon ECR
         run: |
           ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
@@ -138,6 +146,10 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: xxxxxxx
+        run: |
+          echo $VERSION
+
       - name: Extract version from package.json
         run: |
           echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
@@ -163,6 +175,10 @@ jobs:
         run: |
           echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
 
+      - name: xxxxxxx
+        run: |
+          echo $VERSION
+          
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
