--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -160,6 +160,7 @@ jobs:
           docker build -t $ECR_REGISTRY/host:$VERSION -f ./apps/host/Dockerfile .
           docker push $ECR_REGISTRY/host:$VERSION
 
+
   update_task_definitions_and_services:
     needs: [ prepare, build_server, build_guest, build_host ]
     runs-on: ubuntu-latest
@@ -171,6 +172,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
       - name: Extract version from package.json
         run: |
           echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
@@ -178,7 +187,7 @@ jobs:
       - name: xxxxxxx
         run: |
           echo $VERSION
-          
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
