--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@monorepo/source",
-  "version": "0.6.8",
+  "version": "0.7.2",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf node_modules dist package-lock.json swagger.json ./.nx/cache",
     "update": "npx npm-check-updates -u",
     "audit": "npm audit fix",
-    "swagger": "npm i && npx ts-node -O '{\\\"module\\\": \\\"commonjs\\\"}' apps/server/src/app/express/api/swaggerRun.ts && npx dtsgenerator --out libs/types/src/api/auto/autoApi.ts ./swagger.json",
+    "swagger": "npm i && npx ts-node -O '{\"module\": \"commonjs\"}' apps/server/src/app/express/api/swaggerRun.ts && npx dtsgenerator --out libs/types/src/api/auto/autoApi.d.ts ./swagger.json",
     "build:guest": "tsc --outDir dist/apps/guest apps/guest/server.ts",
     "build:host": "tsc --outDir dist/apps/host apps/host/server.ts"
   },
