--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/zxcvbn": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "axios": "^1.6.6",
     "eslint": "~8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.29.1",
@@ -49,19 +50,19 @@
     "jest": "^29.7.0",
     "jsdom": "~24.0.0",
     "nx": "^17.2.8",
-    "nx-cloud": "^16.0.4",
+    "nx-cloud": "^16.5.2",
     "prettier": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-refresh": "^0.14.0",
     "react-router-dom": "6.21.3",
+    "swiper": "^11.0.5",
     "ts-jest": "^29.1.2",
     "ts-node": "10.9.2",
     "typescript": "~5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-dts": "~3.7.2",
-    "axios": "^1.6.6",
     "vitest": "~1.2.1"
   },
   "dependencies": {
@@ -73,7 +74,7 @@
     "express": "^4.18.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0",
+    "mongoose": "^8.1.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
     "zxcvbn": "^4.4.2"
