--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/babel-plugin": "11.11.0",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
