--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "20.11.6",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -49,6 +50,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jsdom": "~24.0.0",
+    "lodash.debounce": "^4.0.8",
     "nx": "^17.2.8",
     "nx-cloud": "^16.5.2",
     "prettier": "^3.2.4",
