--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "20.11.6",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -70,6 +71,7 @@
   "dependencies": {
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
     "@sendgrid/mail": "^8.1.0",
+    "aws-sdk": "^2.1544.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -77,6 +79,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
     "typescript-json-schema": "^0.62.0",
