--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "vitest": "~1.2.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.501.0",
+    "@aws-sdk/client-ses": "^3.501.0",
+    "@aws-sdk/lib-storage": "^3.501.0",
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
     "@sendgrid/mail": "^8.1.0",
-    "aws-sdk": "^2.1544.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
