--- a/libs/types/tsconfig.lib.json
+++ b/libs/types/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": ["node", "vite/client"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../apps/server/src/app/mongo/geoJson/geoJsonModel.ts"],
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
