--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,149 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  prepare:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          ssh-key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.11.0'
-
-      - name: Bump version in package.json
-        run: |
-          npm version patch --no-git-tag-version
-          NEW_VERSION=$(node -p "require('./package.json').version")
-          git config --global user.email "michael+cicd@offisito.com"
-          git config --global user.name "GitHub Action"
-          git commit -am "chore(release): bump version to $NEW_VERSION [skip ci]"
-          git tag v$NEW_VERSION
-
-
-      - name: Set up Git with SSH for pushing
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config user.name 'github-actions'
-          git config user.email 'github-actions@github.com'
-          git push git@github.com:${{ github.repository }} HEAD:${{ github.ref_name }}
-
-  build_server:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.11.0'
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Extract version from package.json
-        run: |
-          echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
-
-
-      - name: Build, tag, and push server image to Amazon ECR
-        run: |
-          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          docker build -t $ECR_REGISTRY/server:$VERSION -f ./apps/server/Dockerfile .
-          docker push $ECR_REGISTRY/server:$VERSION
-
-
-  build_guest:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.11.0'
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Extract version from package.json
-        run: |
-          echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
-
-
-
-      - name: Build, tag, and push guest image to Amazon ECR
-        run: |
-          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          docker build -t $ECR_REGISTRY/guest:$VERSION -f ./apps/guest/Dockerfile .
-          docker push $ECR_REGISTRY/guest:$VERSION
-
-
-  build_host:
-    needs: prepare
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.11.0'
-
-
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-
-      - name: Extract version from package.json
-        run: |
-          echo "VERSION=$(cat package.json | jq -r .version)" >> $GITHUB_ENV
-
-      - name: Build, tag, and push host image to Amazon ECR
-        run: |
-          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          docker build -t $ECR_REGISTRY/host:$VERSION -f ./apps/host/Dockerfile .
-          docker push $ECR_REGISTRY/host:$VERSION
-
 
   deploy_to_ecs:
-    needs: [ prepare, build_server, build_guest, build_host ]
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS credentials
@@ -218,26 +77,32 @@ jobs:
           jq '.taskDefinition | del(.taskDefinitionArn, .status, .revision, .registeredAt, .registeredBy, .requiresAttributes, .compatibilities)' intermediate-host-task-def.json > final-host-task-def.json
 
       - name: Register task definition for server
+        id: register-task-def-server
         run: |
-          aws ecs register-task-definition --cli-input-json file://final-server-task-def.json
+          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://final-server-task-def.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "TASK_DEF_ARN_SERVER=$TASK_DEF_ARN" >> $GITHUB_ENV
 
       - name: Register task definition for guest
+        id: register-task-def-guest
         run: |
-          aws ecs register-task-definition --cli-input-json file://final-guest-task-def.json
+          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://final-guest-task-def.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "TASK_DEF_ARN_GUEST=$TASK_DEF_ARN" >> $GITHUB_ENV
 
       - name: Register task definition for host
+        id: register-task-def-host
         run: |
-          aws ecs register-task-definition --cli-input-json file://final-host-task-def.json
+          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://final-host-task-def.json | jq -r '.taskDefinition.taskDefinitionArn')
+          echo "TASK_DEF_ARN_HOST=$TASK_DEF_ARN" >> $GITHUB_ENV
 
       - name: Update ECS Service for server
         run: |
-          aws ecs update-service --cluster prod --service server --task-definition server:latest
+          aws ecs update-service --cluster prod --service server --task-definition $TASK_DEF_ARN_SERVER
 
       - name: Update ECS Service for guest
         run: |
-          aws ecs update-service --cluster prod --service guest --task-definition guest:latest
+          aws ecs update-service --cluster prod --service guest --task-definition $TASK_DEF_ARN_GUEST
 
       - name: Update ECS Service for host
         run: |
-          aws ecs update-service --cluster prod --service host --task-definition host:latest
+          aws ecs update-service --cluster prod --service host --task-definition $TASK_DEF_ARN_HOST
 
