email back to sg

--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -5,3 +5,4 @@ MONGO_URI=mongodb+srv://natanyoad:pU2L36PPrJ7ZgqR5@offisito-preprod.0qmlp13.mong
 AWS_KEY_ID=AKIA3FLD3I6YSCWAKFRH
 AWS_SECRET_KEY=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
 AWS_REGION=us-east-1
+SENDGRID=
