--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "sendgrid": "^5.2.3",
     "typescript-json-schema": "^0.62.0",
     "zxcvbn": "^4.4.2"
   }
