--- a/apps/server/template.env
+++ b/apps/server/template.env
@@ -6,3 +6,4 @@ AWS_KEY_ID=AKIA3FLD3I6YSCWAKFRH
 AWS_SECRET_KEY=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
 AWS_REGION=us-east-1
 SENDGRID=
+GOOGLE_GEO_CODING=AIzaSyD1oQlWkspPQ-P2WMJJdCKp7UgRZa3HYxA
