--- a/package.json
+++ b/package.json
@@ -67,12 +67,12 @@
     "vitest": "~1.2.1"
   },
   "dependencies": {
-    "axios": "^1.6.6",
     "@aws-sdk/client-s3": "^3.501.0",
     "@aws-sdk/client-ses": "^3.501.0",
     "@aws-sdk/lib-storage": "^3.501.0",
     "@mnpcmw6444/mongoose-auto-versioning": "^4.0.0",
     "@sendgrid/mail": "^8.1.0",
+    "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -82,6 +82,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "sendgrid": "^5.2.3",
+    "stripe": "^14.14.0",
     "typescript-json-schema": "^0.62.0",
     "zxcvbn": "^4.4.2"
   }
