--- a/.github/workflows/version-prod.yml
+++ b/.github/workflows/version-prod.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   prepare:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
