--- a/.github/workflows/version-prod.yml
+++ b/.github/workflows/version-prod.yml
@@ -30,7 +30,7 @@ jobs:
           NEW_VERSION=$(node -p "require('./package.json').version")
           git config --global user.email "michael+cicd@offisito.com"
           git config --global user.name "GitHub Action"
-          git commit -am "CI/CD Version auto-increment to $NEW_VERSION"
+          git commit -am "CI/CD Version auto-increment to $NEW_VERSION [skip ci]"
           git tag v$NEW_VERSION
 
 
