--- a/.github/workflows/main-preprod.yml
+++ b/.github/workflows/main-preprod.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   prepare:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
 
   build_server:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -80,7 +80,7 @@ jobs:
 
   build_guest:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -116,7 +116,7 @@ jobs:
 
   build_host:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -153,7 +153,7 @@ jobs:
 
   deploy_to_ecs:
     needs: [ prepare, build_server, build_guest, build_host ]
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
