--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -13,6 +13,9 @@
   "references": [
     {
       "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ],
   "extends": "../../tsconfig.base.json"
